--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
         "test:e2e": "jest --config ./test/jest-e2e.json",
         "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-        "typeorm:migration:generate": "npm run typeorm -- migration:generate -n",
-        "typeorm:migration:run": "npm run typeorm -- migration:run",
-        "typeorm:migration:revert": "npm run typeorm -- migration:revert"
+        "migration:create": "npm run typeorm -- migration:create",
+        "migration:run": "npm run typeorm -- migration:run",
+        "migration:revert": "npm run typeorm -- migration:revert"
     },
     "dependencies": {
         "@nestjs/common": "^8.0.0",
@@ -35,7 +35,8 @@
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
-        "typeorm": "^0.2.37"
+        "typeorm": "^0.2.37",
+        "typeorm-naming-strategies": "^2.0.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^8.0.0",
