--- a/package.json
+++ b/package.json
@@ -22,29 +22,43 @@
         "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
         "migration:create": "npm run typeorm -- migration:create",
         "migration:run": "npm run typeorm -- migration:run",
-        "migration:revert": "npm run typeorm -- migration:revert"
+        "migration:revert": "npm run typeorm -- migration:revert",
+        "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
+        "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
     },
     "dependencies": {
         "@nestjs/common": "^8.0.0",
         "@nestjs/config": "^1.0.1",
         "@nestjs/core": "^8.0.0",
+        "@nestjs/jwt": "^8.0.0",
         "@nestjs/mapped-types": "*",
+        "@nestjs/passport": "^8.0.1",
         "@nestjs/platform-express": "^8.0.0",
         "@nestjs/typeorm": "^8.0.2",
+        "bcrypt": "^5.0.1",
         "mysql2": "^2.3.0",
+        "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
         "typeorm": "^0.2.37",
-        "typeorm-naming-strategies": "^2.0.0"
+        "typeorm-naming-strategies": "^2.0.0",
+        "typeorm-seeding": "^1.6.1",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@nestjs/cli": "^8.0.0",
         "@nestjs/schematics": "^8.0.0",
         "@nestjs/testing": "^8.0.0",
+        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
+        "@types/faker": "^5.5.8",
         "@types/jest": "^27.0.1",
         "@types/node": "^16.0.0",
+        "@types/passport-jwt": "^3.0.6",
+        "@types/passport-local": "^1.0.34",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^4.28.2",
         "@typescript-eslint/parser": "^4.28.2",
