--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
     },
     "dependencies": {
+        "@nestjs/bull": "^0.4.1",
         "@nestjs/common": "^8.0.0",
         "@nestjs/config": "^1.0.1",
         "@nestjs/core": "^8.0.0",
@@ -36,6 +37,9 @@
         "@nestjs/platform-express": "^8.0.0",
         "@nestjs/typeorm": "^8.0.2",
         "bcrypt": "^5.0.1",
+        "bull": "^3.29.2",
+        "class-transformer": "^0.4.0",
+        "class-validator": "^0.13.1",
         "mysql2": "^2.3.0",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
@@ -46,16 +50,19 @@
         "typeorm": "^0.2.37",
         "typeorm-naming-strategies": "^2.0.0",
         "typeorm-seeding": "^1.6.1",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "xlsx": "^0.17.1"
     },
     "devDependencies": {
         "@nestjs/cli": "^8.0.0",
         "@nestjs/schematics": "^8.0.0",
         "@nestjs/testing": "^8.0.0",
         "@types/bcrypt": "^5.0.0",
+        "@types/bull": "^3.15.4",
         "@types/express": "^4.17.13",
         "@types/faker": "^5.5.8",
         "@types/jest": "^27.0.1",
+        "@types/multer": "^1.4.7",
         "@types/node": "^16.0.0",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
