--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
     },
     "dependencies": {
+        "@nestjs-modules/mailer": "^1.6.0",
         "@nestjs/bull": "^0.4.1",
         "@nestjs/common": "^8.0.0",
         "@nestjs/config": "^1.0.1",
@@ -40,7 +41,9 @@
         "bull": "^3.29.2",
         "class-transformer": "^0.4.0",
         "class-validator": "^0.13.1",
+        "handlebars": "^4.7.7",
         "mysql2": "^2.3.0",
+        "nodemailer": "^6.6.3",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
@@ -64,6 +67,7 @@
         "@types/jest": "^27.0.1",
         "@types/multer": "^1.4.7",
         "@types/node": "^16.0.0",
+        "@types/nodemailer": "^6.4.4",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
         "@types/supertest": "^2.0.11",
