--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@nestjs/mapped-types": "*",
         "@nestjs/passport": "^8.0.1",
         "@nestjs/platform-express": "^8.0.0",
+        "@nestjs/swagger": "^5.0.9",
         "@nestjs/typeorm": "^8.0.2",
         "bcrypt": "^5.0.1",
         "bull": "^3.29.2",
@@ -43,6 +44,7 @@
         "class-validator": "^0.13.1",
         "handlebars": "^4.7.7",
         "mysql2": "^2.3.0",
+        "nestjs-typeorm-paginate": "^2.6.2",
         "nodemailer": "^6.6.3",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
@@ -50,6 +52,7 @@
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
+        "swagger-ui-express": "^4.1.6",
         "typeorm": "^0.2.37",
         "typeorm-naming-strategies": "^2.0.0",
         "typeorm-seeding": "^1.6.1",
